tdf#128304 export TB_RL writing mode as eaVirt

and import eaVirt to TextWritingMode instead of TextPreRotateAngle
(-90) degree of CustomShapeGeometry. CJK text in TB_RL writing mode
are upright in Writer. It corresponds to eaVirt by its defintion.

Change-Id: I2a8bc6676ad6af06b06e023adaa2f201a028d426